[tool.poetry]
name = "gremlin-py-scratchpad"
version = "0.1.0"
description = ""
authors = ["saswata <saswat.dutta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gremlinpython = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
